# docs

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  astro.config.mjs  book.toml  package-lock.json  package.json
.github/workflows/: docs.yml
src/: SUMMARY.md  authoring.md  intro.md  modules.md  quickstart.md
src/components/: BlastGraph.astro  Callout.astro  ModuleGraph.astro
src/content/: config.ts
src/content/docs/: authoring-a-module.md  overview.md  using-the-registry.md
src/content/docs/concepts/: blast-radius.mdx
src/content/moduledocs/botnoc/: doc-agent-dispatch-setup.md  doc-dynamic-layout.md  doc-gitlab-integration-design.md  doc-topology.md  readme.md
src/content/moduledocs/brand/: readme.md
src/content/moduledocs/brando/: readme.md
src/content/moduledocs/buildbarn/: changelog.md  doc-rbe.md  readme.md
src/content/moduledocs/fastverk-app/: readme.md
src/content/moduledocs/forge/: changelog.md  readme.md
src/content/moduledocs/fvkit/: readme.md
src/content/moduledocs/meridian/: doc-declarative-worker-spec.md  doc-framework.md  doc-uiview-wasm-serde-oneof-issue.md  examples.md  readme.md
src/content/moduledocs/meridian_schemas/: readme.md
src/content/moduledocs/meridian_tui/: readme.md
src/content/moduledocs/meridian_uiview_core/: readme.md
src/content/moduledocs/meridian_web/: readme.md
src/content/moduledocs/pinax/: readme.md
src/content/moduledocs/rules_agentic_ide/: changelog.md  doc-consumer-setup.md  doc-mcp-gateway.md  doc-mcp-hosts.md  doc-upgrading.md  readme.md
src/content/moduledocs/rules_aip/: changelog.md  (+2 more)
src/data/: modules.json
src/layouts/: Doc.astro
src/lib/: client.ts  nav.ts
src/pages/: [...slug].astro  index.astro
src/pages/reference/: graph.astro  modules.astro
src/styles/: docs.css
tools/: gen_modules.py
(+240 files in other folders)
